--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ coverage
 .cache
 .envrc
 tsconfig.tsbuildinfo
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
