--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
     "server:debug": "nodemon --exec tsx --enable-source-maps --inspect ./src",
     "prestart": "npm run build",
     "start": "NODE_ENV=production node --use-strict .",
-    "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
+    "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report"
   },
   "author": "Defra DDTS",
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@axe-core/playwright": "^4.10.1",
     "@babel/runtime": "^7.26.0",
     "@defra/hapi-tracing": "^1.0.0",
     "@elastic/ecs-pino-format": "^1.5.0",
@@ -51,22 +56,25 @@
     "cssnano": "^7.0.6",
     "cssnano-preset-default": "^7.0.6",
     "date-fns": "^4.1.0",
-    "global-agent": "^3.0.0",
     "govuk-frontend": "^5.7.1",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
+    "https-proxy-agent": "^7.0.5",
     "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
+    "marked": "^15.0.6",
     "node-fetch": "^3.3.2",
     "nunjucks": "^3.2.4",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
-    "undici": "^6.21.1"
+    "undici": "^6.20.1",
+    "global-agent": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@playwright/test": "^1.50.1",
     "@types/convict": "^6.1.6",
     "@types/hapi__catbox-memory": "^4.1.8",
     "@types/jest": "^29.5.14",
